# discord-dearrow-bot

./: Cargo.toml  README.md  flake.nix
src/: dearrow.rs  main.rs
