[package]
name = "discord-dearrow-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
regex-lite = "0.1.6"
reqwest = { version = "0.12.5", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.38.1", features = ["rt"] }

[profile.release]
strip = true
lto = "thin"
